--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio ALURA</title>
-    <link rel="stylesheet" href="Style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Inter:wght@400;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>JS Game</title>
 </head>
+
 <body>
-    <header class="header">
-        <nav class="header__menu">
-            <a class="header__menu__link" href="index.html">Home</a>
-            <a class="header__menu__link" href="Curriculum.html">Curriculum</a>
-            <a class="header__menu__link" href="about.html">Sobre mí</a>
-        </nav>
-    </header>
-    <main class="presentacion">
-        <section class="presentacion__contenido">
-            <h1 class="presentacion__contenido__titulo">Eleve tu negocio digital a otro nivel<strong class="resaltar-Titulo"> con un Front-end de calidad!</strong></h1>
-            <p class="presentacion__contenido__texto">¡Hola! Soy Ana García, desarrolladora Front-end con especialización en React, HTML y CSS.
-                Ayudo a pequeños negocios y diseñadores a llevar a cabo buenas ideas. ¿Hablamos?
-            </p>
-            <div class="presentacion__enlaces">
-                <h2 class="presentacion__enlaces__subtitulo"> Accede a mis redes:</h2>
-                <a class="presentacion__enlaces__link" href="https://www.instagram.com/">
-                    <img src="./assets/instagram.png" alt=""> Instagram</a>
 
-                <a class="presentacion__enlaces__link" href="https://github.com/">
-                    <img src="./assets/github.png" alt=""> GitHub</a>
-
+    <div class="container">
+        <div class="container__contenido">
+            <div class="container__informaciones">
+                <div class="container__texto">
+                    <h1></h1>
+                    <p class="texto__parrafo"></p>
+                </div>
+                <input type="number" id= "valorUsuario" min="1" max="10" class="container__input">
+                <div class="chute container__botones">
+                    <button onclick="verificarValor();" class="container__boton">Intentar</button>
+                    <button onclick="generarNroSecreto();" class="container__boton" id="reiniciar" >Nuevo juego</button>
+                </div>
             </div>
-        </section>
-        <img class="presentacion__imagen" src="Imagenes/Rectangle 47.png" alt="Imagen de Ana Garcia">
-    </main>
-    <footer class="footer">Desarrollado por ALURA Latam</footer>
+            <img src="./img/ia.png" alt="Una persona mirando a la izquierda" class="container__imagen-persona" />
+        </div>
+    </div>
+
+
+
+
+    <script src="app.js" defer></script>
 </body>
+
 </html>
